--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /.bundle
 
 # Ignore the default SQLite database and yaml_db database files
-/db/*.sqlite3
+/db/*.sqlite3*
 /db/data.yml*
 
 # Ignore all logfiles and tempfiles.
