--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,5 @@ before_script:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - cp config/secrets.yml.example config/secrets.yml
+
