--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,6 +20,8 @@ development:
   aws_ses_access_key_id: ~
   aws_ses_secret_access_key: ~
   aws_ses_endpoint_server: ~
+  openstax_exercises_js_url: 'http://localhost:8001/dist/exercises.js'
+  openstax_exercises_css_url: 'http://localhost:8001/dist/exercises.css'
 
 
 test:
@@ -32,6 +34,9 @@ test:
   aws_ses_access_key_id: ~
   aws_ses_secret_access_key: ~
   aws_ses_endpoint_server: ~
+  openstax_exercises_js_url: 'http://localhost:8001/dist/exercises.js'
+  openstax_exercises_css_url: 'http://localhost:8001/dist/exercises.css'
+
 
 # Do not keep production secrets in the repository.
 production:
@@ -44,3 +49,5 @@ production:
   aws_ses_access_key_id: <%= ENV["AWS_SES_ACCESS_KEY_ID"] %>
   aws_ses_secret_access_key: <%= ENV["AWS_SES_SECRET_ACCESS_KEY"] %>
   aws_ses_endpoint_server: <%= ENV["AWS_SES_ENDPOINT_SERVER"] %>
+  openstax_exercises_js_url: '/assets/exercises.js'
+  openstax_exercises_css_url: '/assets/exercises.css'
