--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp/**/*
 
 # Ignore files containing keys and passwords
+config/secrets.yml
 config/*settings.yml
 
 # Ignore compiled assets and uploaded files
