--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ addons:
   postgresql: "9.3"
 before_script:
   - gem install pg
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c "CREATE USER ox_exercises WITH CREATEDB PASSWORD 'ox_exercises'" -U postgres
+  - bundle exec rake db:create
+  - bundle exec rake db:schema:load
 script:
-  - RAILS_ENV=test bundle exec rake --trace
+  - bundle exec rake --trace
 branches:
   only:
     - master
