--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,19 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  username: <%= ENV['OXE_DB_USER'] || 'ox_exercises' %>
+  password: <%= ENV['OXE_DB_PASS'] || 'ox_exercises' %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV['OXE_DEV_DB'] || 'ox_exercises_dev' %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= ENV['OXE_TEST_DB'] || 'ox_exercises_test' %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV['OXE_PROD_DB'] || 'ox_exercises' %>
