--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -45,6 +45,11 @@ production:
       url: <%= ENV["OPENSTAX_ACCOUNTS_URL"] || 'https://accounts.openstax.org' %>
       stub: <%= ENV["OPENSTAX_ACCOUNTS_STUB"] %>
   aws:
+    s3:
+      access_key_id: <%= ENV["AWS_S3_ACCESS_KEY_ID"] %>
+      secret_access_key: <%= ENV["AWS_S3_SECRET_ACCESS_KEY"] %>
+      endpoint_server: <%= ENV["AWS_S3_ENDPOINT_SERVER"] %>
+      bucket_name: <%= ENV["AWS_S3_BUCKET_NAME"] %>
     ses:
       access_key_id: <%= ENV["AWS_SES_ACCESS_KEY_ID"] %>
       secret_access_key: <%= ENV["AWS_SES_SECRET_ACCESS_KEY"] %>
