Added asset host to secrets.yml

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -50,6 +50,7 @@ production:
       secret_access_key: <%= ENV["AWS_S3_SECRET_ACCESS_KEY"] %>
       endpoint_server: <%= ENV["AWS_S3_ENDPOINT_SERVER"] %>
       bucket_name: <%= ENV["AWS_S3_BUCKET_NAME"] %>
+      asset_host: <%= ENV["AWS_S3_ASSET_HOST"] %>
     ses:
       access_key_id: <%= ENV["AWS_SES_ACCESS_KEY_ID"] %>
       secret_access_key: <%= ENV["AWS_SES_SECRET_ACCESS_KEY"] %>
