--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -48,6 +48,7 @@ production:
     s3:
       access_key_id: <%= ENV["AWS_S3_ACCESS_KEY_ID"] %>
       secret_access_key: <%= ENV["AWS_S3_SECRET_ACCESS_KEY"] %>
+      region: <%= ENV["AWS_S3_REGION"] %>
       endpoint_server: <%= ENV["AWS_S3_ENDPOINT_SERVER"] %>
       bucket_name: <%= ENV["AWS_S3_BUCKET_NAME"] %>
       asset_host: <%= ENV["AWS_S3_ASSET_HOST"] %>
