--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= ENV['OXE_TEST_DB'] || 'ox_exercises_test' %>
+  database: '<%= ENV['OXE_TEST_DB'] || 'ox_exercises_test' %><%= \
+                 "_#{ENV['TEST_ENV_NUMBER']}" if !ENV['TEST_ENV_NUMBER'].blank? %>'
 
 production:
   <<: *default
