--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Copyright 2011-2014 Rice University. Licensed under the Affero General Public 
+# Copyright 2011-2014 Rice University. Licensed under the Affero General Public
 # License version 3 or later.  See the COPYRIGHT file for details.
 sudo: false
 language: ruby
@@ -8,6 +8,8 @@ cache: bundler
 bundler_args: --without production --retry=6
 addons:
   postgresql: "9.3"
+  apt_packages:
+    libmagic-dev
 script:
   - bundle exec parallel_rspec ./spec
 branches:
