--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ rspec.failures
 # Ignore brakeman reports
 brakeman.html
 
-# Ignore coveralls reports
+# Ignore coverage reports
 coverage/*
 
 # Ignore ERD diagrams
