--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -31,9 +31,9 @@ test:
   css_url: http://localhost:8001/dist/exercises.css
   openstax:
     accounts:
-      client_id: ~
-      secret: ~
-      url: http://localhost:2999
+      client_id: <%= ENV["OPENSTAX_ACCOUNTS_CLIENT_ID"] %>
+      secret: <%= ENV["OPENSTAX_ACCOUNTS_SECRET"] %>
+      url: <%= ENV["OPENSTAX_ACCOUNTS_URL"] || 'http://localhost:2999' %>
       stub: true
   exception:
     environment_name: test
