--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@
 # License version 3 or later.  See the COPYRIGHT file for details.
 sudo: false
 language: ruby
-rvm:
-  - 2.2.3
+rvm: 2.2.3
 cache: bundler
 bundler_args: --without production --retry=6
 addons:
   postgresql: "9.5"
-script:
-  - bundle exec parallel_rspec ./spec
+services: redis-server
+script: bundle exec parallel_rspec ./spec
 branches:
   only:
     - master
