--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config
 /.bundle
 
+# Ignore installed gems
+vendor
+
 # Ignore the default SQLite database and yaml_db database files
 /db/*.sqlite3*
 /db/data.yml*
