--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,6 @@
 default: &default
   adapter: postgresql
+  host: localhost
   username: <%= ENV['OXE_DB_USER'] || 'ox_exercises' %>
   password: <%= ENV['OXE_DB_PASS'] || 'ox_exercises' %>
 
