--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ env:
     - PARALLEL_TEST_PROCESSORS=2
   matrix:
     - ASSETS=true
-    - TAG=speed:slow
-    - TAG=~speed:slow
+    - TAG=speed:all
 rvm: 2.6.1
 cache: bundler
 before_install:
