--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,12 @@
 default: &default
   adapter: postgresql
-  host: localhost
+  host: <%= ENV['OXE_DB_HOST'] || 'localhost' %>
   username: <%= ENV['OXE_DB_USER'] || 'ox_exercises' %>
   password: <%= ENV['OXE_DB_PASS'] || 'ox_exercises' %>
 
 development:
   <<: *default
+  host: <%= ENV['OXE_DEV_DB_HOST'] || 'localhost' %>
   database: <%= ENV['OXE_DEV_DB'] || 'ox_exercises_dev' %>
 
 # Warning: The database defined as "test" will be erased and
@@ -13,6 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: <%= ENV['OXE_TEST_DB_HOST'] || 'localhost' %>
   database: '<%= ENV['OXE_TEST_DB'] || 'ox_exercises_test' %><%= \
                  "_#{ENV['TEST_ENV_NUMBER']}" if !ENV['TEST_ENV_NUMBER'].blank? %>'
   reaping_frequency: 0 # 0 = disabled - incompatible with our DatabaseCleaner config
