--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 default: &default
   adapter: postgresql
   host: <%= ENV['OXE_DB_HOST'] || 'localhost' %>
+  port: <%= ENV['OXE_DB_PORT'] || 5432 %>
   username: <%= ENV['OXE_DB_USER'] || 'ox_exercises' %>
   password: <%= ENV['OXE_DB_PASS'] || 'ox_exercises' %>
 
@@ -20,5 +21,9 @@ test:
   reaping_frequency: 0 # 0 = disabled - incompatible with our DatabaseCleaner config
 
 production:
-  <<: *default
-  database: <%= ENV['OXE_PROD_DB'] || 'ox_exercises' %>
+  adapter: postgresql
+  host: <%= ENV['RDS_HOST'] %>
+  port: <%= ENV['RDS_PORT'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  database: <%= ENV['RDS_DATABASE'] %>
