Split the Redis url secret Connect to the DB via SSL

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,7 +22,11 @@ development:
   exception:
     contact_name: <%= ENV['EXCEPTION_CONTACT_NAME'] || 'OpenStax' %>
   redis:
-    url: <%= ENV['REDIS_URL'] || 'redis://localhost:6379/0' %>
+    password: <%= ENV['REDIS_PASSWORD'] %>
+    host: <%= ENV['REDIS_HOST'] || 'localhost' %>
+    port: <%= ENV['REDIS_PORT'] %>
+    db: <%= ENV['REDIS_DB'] %>
+    url: <%= ENV['REDIS_URL'] %>
     namespaces:
       cache: <%= ENV['REDIS_NAMESPACES_CACHE'] || 'exercises-development-cache' %>
 
@@ -39,7 +43,11 @@ test:
   exception:
     contact_name: OpenStax
   redis:
-    url: redis://localhost:6379/0
+    password: <%= ENV['REDIS_PASSWORD'] %>
+    host: <%= ENV['REDIS_HOST'] || 'localhost' %>
+    port: <%= ENV['REDIS_PORT'] %>
+    db: <%= ENV['REDIS_DB'] %>
+    url: <%= ENV['REDIS_URL'] %>
     namespaces:
       cache: exercises-test-cache
 
@@ -58,6 +66,10 @@ production:
   exception:
     contact_name: <%= ENV['EXCEPTION_CONTACT_NAME'] %>
   redis:
+    password: <%= ENV['REDIS_PASSWORD'] %>
+    host: <%= ENV['REDIS_HOST'] %>
+    port: <%= ENV['REDIS_PORT'] %>
+    db: <%= ENV['REDIS_DB'] %>
     url: <%= ENV['REDIS_URL'] %>
     namespaces:
       cache: <%= ENV['REDIS_NAMESPACES_CACHE'] %>
