--- a/config/database.yml
+++ b/config/database.yml
@@ -29,3 +29,5 @@ production:
   password: <%= ENV['RDS_PASSWORD'] %>
   database: <%= ENV['RDS_DATABASE'] %>
   pool: <%= ENV['RAILS_MAX_THREADS'] %>
+  sslmode: verify-full
+  sslrootcert: /etc/ssl/certs/rds.pem
