--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -78,8 +78,7 @@ production:
   aws:
     s3:
       region: <%= ENV['AWS_S3_REGION'] %>
-      endpoint_server: <%= ENV['AWS_S3_ENDPOINT_SERVER'] %>
-      bucket_name: <%= ENV['AWS_S3_BUCKET_NAME'] %>
-      asset_host: <%= ENV['AWS_S3_ASSET_HOST'] %>
+      exports_bucket_name: <%= ENV['AWS_S3_EXPORTS_BUCKET_NAME'] %>
+      uploads_bucket_name: <%= ENV['AWS_S3_UPLOADS_BUCKET_NAME'] %>
       access_key_id: <%= ENV['AWS_S3_ACCESS_KEY_ID'] %>
       secret_access_key: <%= ENV['AWS_S3_SECRET_ACCESS_KEY'] %>
