Added fake S3 config for the test env

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -48,6 +48,12 @@ test:
     url: <%= ENV['REDIS_URL'] %>
     namespaces:
       cache: exercises-test-cache
+  aws:
+    s3:
+      region: us-east-1
+      uploads_bucket_name: not-a-real-bucket
+      access_key_id: NOTAREALKEY
+      secret_access_key: NOTAREALSECRET
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
