Added status page

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -63,6 +63,8 @@ production:
   mail_site_url: <%= ENV['MAIL_SITE_URL'] %>
   environment_name: <%= ENV['ENVIRONMENT_NAME'] %>
   exception_contact_name: <%= ENV['EXCEPTION_CONTACT_NAME'] %>
+  release_version: <%= ENV['RELEASE_VERSION'] %>
+  deployment_version: <%= ENV['DEPLOYMENT_VERSION'] %>
   openstax:
     accounts:
       client_id: <%= ENV['OPENSTAX_ACCOUNTS_CLIENT_ID'] %>
