--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -51,6 +51,7 @@ test:
   aws:
     s3:
       region: us-east-1
+      exports_bucket_name: not-a-real-bucket
       uploads_bucket_name: not-a-real-bucket
       access_key_id: NOTAREALKEY
       secret_access_key: NOTAREALSECRET
