--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -65,7 +65,7 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rake db:create db:schema:load db:seed --trace
           bundle exec rails runner '10.times { FactoryBot.create :exercise }'
-          git checkout -
+          git checkout --force -
 
       # Retrieve gem cache for PR merge commit
       - uses: actions/cache@v2
