--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -12,16 +12,6 @@ jobs:
   assets:
     timeout-minutes: 30
     runs-on: ubuntu-18.04
-    services:
-      postgres:
-        image: postgres:11
-        ports:
-        - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: ci_test
-          POSTGRES_PASSWORD: postgres
 
     steps:
       - uses: actions/checkout@v2
@@ -34,12 +24,7 @@ jobs:
           key: ${{ runner.os }}-gems-pr-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-pr-
-      - name: Test
-        env:
-          OXT_DB_USER: postgres
-          OXT_TEST_DB: ci_test
-          OXT_DB_PASS: postgres
-          RAILS_ENV: test
+      - name: Build assets
         run: |
           gem install bundler
           bundle config path vendor/bundle
