Added tests for content APIs and cassettes

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,6 +21,14 @@ development:
       secret: <%= ENV['OPENSTAX_ACCOUNTS_SECRET'] %>
       url: <%= ENV['OPENSTAX_ACCOUNTS_URL'] || 'http://localhost:2999' %>
       stub: <%= ENV['OPENSTAX_ACCOUNTS_STUB'] %>
+    content:
+      abl_url: <%= ENV['OPENSTAX_CONTENT_ABL_URL'] || 'https://raw.githubusercontent.com/openstax/content-manager-approved-books/master/approved-book-list.json' %>
+      archive_path: <%= ENV['OPENSTAX_CONTENT_ARCHIVE_PATH'] || 'apps/archive' %>
+      bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] %>
+      domain: <%= ENV['OPENSTAX_CONTENT_DOMAIN'] || 'openstax.org' %>
+      s3_region: <%= ENV['OPENSTAX_CONTENT_S3_REGION'] || 'us-east-1' %>
+      s3_access_key_id: <%= ENV['OPENSTAX_CONTENT_S3_ACCESS_KEY_ID'] %>
+      s3_secret_access_key: <%= ENV['OPENSTAX_CONTENT_S3_SECRET_ACCESS_KEY'] %>
   redis:
     password: <%= ENV['REDIS_PASSWORD'] %>
     host: <%= ENV['REDIS_HOST'] || 'localhost' %>
@@ -42,6 +50,14 @@ test:
       secret: ~
       url: http://localhost:2999
       stub: true
+    content:
+      abl_url: https://raw.githubusercontent.com/openstax/content-manager-approved-books/master/approved-book-list.json
+      archive_path: apps/archive
+      bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] || 'not-a-real-bucket' %>
+      domain: openstax.org
+      s3_region: <%= ENV['OPENSTAX_CONTENT_S3_REGION'] || 'us-east-1' %>
+      s3_access_key_id: <%= ENV['OPENSTAX_CONTENT_S3_ACCESS_KEY_ID'] %>
+      s3_secret_access_key: <%= ENV['OPENSTAX_CONTENT_S3_SECRET_ACCESS_KEY'] %>
   redis:
     password: <%= ENV['REDIS_PASSWORD'] %>
     host: <%= ENV['REDIS_HOST'] || 'localhost' %>
@@ -75,6 +91,14 @@ production:
       secret: <%= ENV['OPENSTAX_ACCOUNTS_SECRET'] %>
       url: <%= ENV['OPENSTAX_ACCOUNTS_URL'] %>
       stub: <%= ENV['OPENSTAX_ACCOUNTS_STUB'] %>
+    content:
+      abl_url: <%= ENV['OPENSTAX_CONTENT_ABL_URL'] %>
+      archive_path: <%= ENV['OPENSTAX_CONTENT_ARCHIVE_PATH'] %>
+      bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] %>
+      domain: <%= ENV['OPENSTAX_CONTENT_DOMAIN'] %>
+      s3_region: <%= ENV['OPENSTAX_CONTENT_S3_REGION'] %>
+      s3_access_key_id: <%= ENV['OPENSTAX_CONTENT_S3_ACCESS_KEY_ID'] %>
+      s3_secret_access_key: <%= ENV['OPENSTAX_CONTENT_S3_SECRET_ACCESS_KEY'] %>
   redis:
     password: <%= ENV['REDIS_PASSWORD'] %>
     host: <%= ENV['REDIS_HOST'] %>
