--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -56,8 +56,8 @@ test:
       bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] || 'not-a-real-bucket' %>
       domain: openstax.org
       s3_region: <%= ENV['OPENSTAX_CONTENT_S3_REGION'] || 'us-east-1' %>
-      s3_access_key_id: <%= ENV['OPENSTAX_CONTENT_S3_ACCESS_KEY_ID'] %>
-      s3_secret_access_key: <%= ENV['OPENSTAX_CONTENT_S3_SECRET_ACCESS_KEY'] %>
+      s3_access_key_id: <%= ENV['OPENSTAX_CONTENT_S3_ACCESS_KEY_ID'] || 'not-a-real-key' %>
+      s3_secret_access_key: <%= ENV['OPENSTAX_CONTENT_S3_SECRET_ACCESS_KEY'] || 'not-a-real-key' %>
   redis:
     password: <%= ENV['REDIS_PASSWORD'] %>
     host: <%= ENV['REDIS_HOST'] || 'localhost' %>
