Fail migration GH action if any file changed (Gemfile.lock, db/schema.db)

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -54,8 +54,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-parent-
 
-      # Install gems, create data to be migrated and revert to PR merge commit
-      - name: Create data to be migrated
+      - name: Install gems from base commit and create data to be migrated
         env:
           OXE_DB_USER: postgres
           OXE_DB_PASS: postgres
@@ -75,11 +74,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-pr-
 
-      # Migrate the data
-      - name: Migrate
+      - name: Install gems from PR, migrate and ensure no files changed
         env:
           OXE_DB_USER: postgres
           OXE_DB_PASS: postgres
         run: |
           bundle install --jobs 4 --retry 3
           bundle exec rake db:migrate
+          git diff --exit-code
