Standardized migration GH action to match Tutor

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -16,15 +16,18 @@ jobs:
       postgres:
         image: postgres:11
         ports:
-        - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         env:
-          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
       redis:
         image: redis
         ports:
-        - 6379:6379
+          - 6379:6379
         # Set health checks to wait until redis has started
         options: >-
           --health-cmd "redis-cli ping"
