--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -49,13 +49,16 @@ jobs:
         with:
           ruby-version: 2.7
 
+      # Get OS version - https://github.com/actions/cache/issues/543
+      - run: echo "OS_VERSION=`lsb_release -sr`" >> $GITHUB_ENV
+
       # Retrieve gem cache for merge commit parent
       - uses: actions/cache@v2
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-gems-parent-${{ hashFiles('**/Gemfile.lock') }}
+          key: ${{ runner.os }}-${{ env.OS_VERSION }}-gems-parent-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-gems-parent-
+            ${{ runner.os }}-${{ env.OS_VERSION }}-gems-parent-
 
       - name: Install gems from base commit and create data to be migrated
         env:
@@ -73,9 +76,9 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: vendor/bundle
-          key: ${{ runner.os }}-gems-pr-${{ hashFiles('**/Gemfile.lock') }}
+          key: ${{ runner.os }}-${{ env.OS_VERSION }}-gems-pr-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-gems-pr-
+            ${{ runner.os }}-${{ env.OS_VERSION }}-gems-pr-
 
       - name: Install gems from PR, migrate and ensure no files changed
         env:
