--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
       # Get OS version - https://github.com/actions/cache/issues/543
