--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 0 * * 0' # weekly
 
 jobs:
   tests:
@@ -42,7 +40,7 @@ jobs:
           OXE_DB_PASS: postgres
           RAILS_ENV: test
         run: |
-          gem install bundler
+          gem install bundler -v 2.4.22
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
           bundle exec rake parallel:create parallel:load_schema parallel:seed --trace
