--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
-  host: <%= ENV['OXE_DB_HOST'] || 'localhost' %>
   port: <%= ENV['OXE_DB_PORT'] || 5432 %>
+  database: <%= ENV['OXE_DB'] || 'ox_exercises_dev' %>
   username: <%= ENV['OXE_DB_USER'] || 'ox_exercises' %>
   password: <%= ENV['OXE_DB_PASS'] || 'ox_exercises' %>
   pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5).to_i %>
@@ -10,6 +10,7 @@ development:
   <<: *default
   host: <%= ENV['OXE_DEV_DB_HOST'] || 'localhost' %>
   database: <%= ENV['OXE_DEV_DB'] || 'ox_exercises_dev' %>
+  <% if RUBY_PLATFORM =~ /darwin/ %>gssencmode: disable<% end %> # Prevent OS X OBJC crash
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,6 +20,7 @@ test:
   host: <%= ENV['OXE_TEST_DB_HOST'] || 'localhost' %>
   database: '<%= ENV['OXE_TEST_DB'] || 'ox_exercises_test' %><%= \
                  "_#{ENV['TEST_ENV_NUMBER']}" if !ENV['TEST_ENV_NUMBER'].blank? %>'
+  <% if RUBY_PLATFORM =~ /darwin/ %>gssencmode: disable<% end %> # Prevent OS X OBJC crash
   reaping_frequency: 0 # 0 = disabled - incompatible with our DatabaseCleaner config
 
 production:
