--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,7 +22,7 @@ development:
       url: <%= ENV['OPENSTAX_ACCOUNTS_URL'] || 'http://localhost:2999' %>
       stub: <%= ENV['OPENSTAX_ACCOUNTS_STUB'] %>
     content:
-      abl_url: <%= ENV['OPENSTAX_CONTENT_ABL_URL'] || 'https://raw.githubusercontent.com/openstax/content-manager-approved-books/main/approved-book-list.json' %>
+      abl_url: <%= ENV['OPENSTAX_CONTENT_ABL_URL'] || 'https://corgi.ce.openstax.org/api/abl/' %>
       archive_path: <%= ENV['OPENSTAX_CONTENT_ARCHIVE_PATH'] || 'apps/archive' %>
       bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] %>
       domain: <%= ENV['OPENSTAX_CONTENT_DOMAIN'] || 'openstax.org' %>
@@ -51,7 +51,7 @@ test:
       url: http://localhost:2999
       stub: true
     content:
-      abl_url: https://raw.githubusercontent.com/openstax/content-manager-approved-books/main/approved-book-list.json
+      abl_url: https://corgi.ce.openstax.org/api/abl/
       archive_path: apps/archive
       bucket_name: <%= ENV['OPENSTAX_CONTENT_BUCKET_NAME'] || 'not-a-real-bucket' %>
       domain: openstax.org
